--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,14 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "Come with me"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Winter Kim"
 description              : "You know Winter is the best."
 url                      : "https://Wintercomesfast.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "Wintercomesfast/Wintercomesfast.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -111,11 +111,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Winter Sol Kim"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            :
+  bio              : "Winter is the best!"
+  location         : "South Korea"
+  email            : "wintergoesfast@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
